--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="./assets/js/split.min.js"></script>
   <script src="./assets/js/main.js" defer></script>
 </head>
 
 <body>
+  <!-- <div class="loading">
+    <div class="text-area">
+      <p>私らしさが 艶 めく毎日を。</p>　
+    </div>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#ff9daf" fill-opacity="1"
+        d="M0,192L34.3,165.3C68.6,139,137,85,206,96C274.3,107,343,181,411,197.3C480,213,549,171,617,154.7C685.7,139,754,149,823,176C891.4,203,960,245,1029,256C1097.1,267,1166,245,1234,208C1302.9,171,1371,117,1406,90.7L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
+      </path>
+    </svg>
+  </div> -->
   <div class="wrapper">
     <header class="header">
       <h1 class="blind">the beautiful
@@ -33,6 +46,12 @@
       </div>
     </header>
     <nav class="gnb">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#0099ff" fill-opacity="1"
+          d="M0,96L48,90.7C96,85,192,75,288,96C384,117,480,171,576,176C672,181,768,139,864,122.7C960,107,1056,117,1152,133.3C1248,149,1344,171,1392,181.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z" />
+      </svg>
+
+      </svg>
       <div class="group">
         <div class="group-main">
           <ul class="nav-list">
@@ -134,18 +153,27 @@
       <section class="section-slogan">
         <h2 class="blind">THE BEAUTIFUL</h2>
         <div class="image-box">
-          <img src="./assets/images/firstview_picture.webp" alt="" class="pc">
-          <img src="./assets/images/firstview_picture@sp.webp" alt="" class="mo">
+
+          <picture>
+            <!-- 961이상 -->
+            <source media="(min-width: 961px)" srcset="./assets/images/firstview_picture.webp">
+            <!-- 960미만 -->
+            <source media="(max-width: 960px)" srcset="./assets/images/firstview_picture@sp.webp">
+            <img src="/assets/images/firstview_picture.webp" alt="">
+          </picture>
+
+        </div>
+        <div class="title-box">
+          <p class="title">
+            THE BEAUTIFUL
+            <!-- <img src="./assets/images/title.png" alt> -->
+          </p>
+          <p class="sub-title">
+            by Amino Mason
+            <!-- <img src="./assets/images/by Amino Mason.png" alt> -->
+          </p>
         </div>
         <div class="inner">
-          <div class="title-box">
-            <p class="title">
-              <img src="./assets/images/title.png" alt>
-            </p>
-            <p class="sub-title">
-              <img src="./assets/images/by Amino Mason.png" alt>
-            </p>
-          </div>
         </div>
       </section>
       <section class="section-concept">
@@ -640,7 +668,7 @@
 
     </main>
     <footer class="footer">
-      <svg viewBox="0 0 1440 96">
+      <svg viewBox="0 0 1440 96" class="footer_svg">
         <g class="footer-border-wave">
           <path id="path1" d="M719.5 38C439.435 15.3187 412 -37 0 38V96.5H1440V38C1053.5 96.5 1003.5 61 719.5 38Z" />
           <path id="path2" d="M719.5 38C439.435 15.3187 412 -37 0 38V96.5H1440V38C1053.5 96.5 1003.5 61 719.5 38Z" />
