코드 여백 정리

--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
               <ul class="sub-list">
                 <li class="sub-item">
                   <a href="">
-                    <span class="top">&#11;-&#31;AMAZON STORE
+                    <span class="top">- AMAZON STORE
                     </span>
-                    <span class="bottom" aria-hidden="true">&#11;-&#31;AMAZON STORE</span>
+                    <span class="bottom" aria-hidden="true">- AMAZON STORE</span>
                   </a>
                 </li>
                 <li class="sub-item">
                   <a href="">
-                    <span class="top">&#11;-&#31;RAKUTEN STORE</span>
-                    <span class="bottom" aria-hidden="true">&#11;-&#31;RAKUTEN STORE</span>
+                    <span class="top">- RAKUTEN STORE</span>
+                    <span class="bottom" aria-hidden="true">- RAKUTEN STORE</span>
                   </a>
                 </li>
                 <li class="sub-item">
                   <a href="">
-                    <span class="top">&#11;-&#31;OFFICIAL STORE</span>
-                    <span class="bottom" aria-hidden="true">&#11;-&#31;OFFICIAL STORE</span>
+                    <span class="top">- OFFICIAL STORE</span>
+                    <span class="bottom" aria-hidden="true">- OFFICIAL STORE</span>
                   </a>
                 </li>
               </ul>
@@ -171,7 +171,9 @@
               <p class="desc">
                 うねり・くせ・パサつきなどの髪ストレスで
                 艶のない<br>
-                疲れた髪の印象を変えて<span class="sup-container typesquare_option"><sup class="sup">＊1</sup></span>
+                疲れた髪の印象を変えて
+                <span class="sup-container typesquare_option">
+                  <sup class="sup">＊1</sup>
                 </span>
                 <br> 髪も心も、もっとヘルシーに！<br>
                 植物のエネルギーが凝縮されたシードオイル<span class="sup-container typesquare_option"><sup
@@ -229,7 +231,7 @@
             <source media="(min-width: 961px)" srcset="./assets/images/about_picture.png">
             <!-- 960미만 -->
             <source media="(max-width: 960px)" srcset="./assets/images/about_picture@sp.webp">
-            <image src="./assets/images/about_picture.png" alt>
+            <img src="./assets/images/about_picture.png" alt>
           </picture>
         </div>
         <div class="desc" data-scroll="">
@@ -239,7 +241,7 @@
               <source media="(min-width: 961px)" srcset="./assets/images/about-desc.png">
               <!-- 960미만 -->
               <source media="(max-width: 960px)" srcset="./assets/images/about_footer_figure@sp.png">
-              <image src="./assets/images/about-desc.png" alt>
+              <img src="./assets/images/about-desc.png" alt>
             </picture>
           </div>
           <div class="bottom-text">
@@ -309,7 +311,7 @@
             <picture>
               <source media="(min-width: 961px)" srcset="./assets/images/ethical_section_picture.png">
               <source media="(max-width: 960px)" srcset="./assets/images/ethical_section_picture@sp.webp">
-              <image src="./assets/images/ethical_section_picture.png" alt>
+              <img src="./assets/images/ethical_section_picture.png" alt>
             </picture>
           </div>
           <div class="recycle">
@@ -604,6 +606,7 @@
         </div>
       </section>
       <section class="section-exBanner">
+        <h2 class="blind">배너</h2>
         <div class="inner">
           <div class="group-area">
             <div class="image">
@@ -611,7 +614,7 @@
             </div>
             <div class="banner">
               <div class="text">
-                <img src="./assets/images/AMINO MASON WEB SITE.png" alt>
+                <img src="./assets/images/AMINO_MASON_WEB_SITE.png" alt>
               </div>
             </div>
           </div>
@@ -703,20 +706,20 @@
                 <ul class="sub-list">
                   <li class="sub-item">
                     <a href="">
-                      <span class="top">-&#31;AMAZON STORE</span>
-                      <span class="bottom" aria-hidden="true">-&#31;AMAZON STORE</span>
+                      <span class="top">- AMAZON STORE</span>
+                      <span class="bottom" aria-hidden="true">- AMAZON STORE</span>
                     </a>
                   </li>
                   <li class="sub-item">
                     <a href="">
-                      <span class="top">-&#31;RAKUTEN STORE</span>
-                      <span class="bottom" aria-hidden="true">-&#31;RAKUTEN STORE</span>
+                      <span class="top">- RAKUTEN STORE</span>
+                      <span class="bottom" aria-hidden="true">- RAKUTEN STORE</span>
                     </a>
                   </li>
                   <li class="sub-item">
                     <a href="">
-                      <span class="top">-&#31;OFFICIAL STORE</span>
-                      <span class="bottom" aria-hidden="true">-&#31;OFFICIAL STORE</span>
+                      <span class="top">- OFFICIAL STORE</span>
+                      <span class="bottom" aria-hidden="true">- OFFICIAL STORE</span>
                     </a>
                   </li>
                 </ul>
