브랜드 교체

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <body>
   <div class="loading">
     <div class="text-area">
-      <p>私らしさが 艶 めく毎日を。</p>　
+      <p>설화. 아름다움은 자란다.</p>　
+      <!-- <p>私らしさが 艶 めく毎日を。</p>　 -->
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ff9daf" fill-opacity="1"
@@ -52,31 +53,31 @@
         <nav class="group-main">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="">
+              <a href="#">
                 <span class="top">TOP</span>
                 <span class="bottom" aria-hidden="true">TOP</span>
               </a>
             </li>
             <li class="nav-item">
-              <a href="">
+              <a href="#about">
                 <span class="top">ABOUT</span>
                 <span class="bottom" aria-hidden="true">ABOUT</span>
               </a>
             </li>
             <li class="nav-item">
-              <a href="">
+              <a href="#ethical">
                 <span class="top">ETHICAL</span>
                 <span class="bottom" aria-hidden="true">ETHICAL</span>
               </a>
             </li>
             <li class="nav-item">
-              <a href="">
+              <a href="#product">
                 <span class="top">PRODUCTS</span>
                 <span class="bottom" aria-hidden="true">PRODUCTS</span>
               </a>
             </li>
             <li class="nav-item">
-              <a href="">
+              <a href="#news">
                 <span class="top">NEWS</span>
                 <span class="bottom" aria-hidden="true">NEWS</span>
               </a>
@@ -120,11 +121,11 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item">
-                <a href="" class="instagram" aria-label="인스타그램">
+                <a href="https://www.instagram.com/sulwhasoo.official/" class="instagram" aria-label="인스타그램">
                 </a>
               </li>
               <li class="sns-item">
-                <a href="" class="twitter" aria-label="트위터">
+                <a href="https://twitter.com/SulwhasooKR" class="twitter" aria-label="X">
                 </a>
               </li>
             </ul>
@@ -207,7 +208,7 @@
         </div>
 
       </section>
-      <section class="section-about">
+      <section class="section-about" id="about">
         <div class="background" data-scroll=""></div>
         <h2 class="headline">
           ABOUT
@@ -220,11 +221,11 @@
         <div class="image-box" data-scroll="">
           <picture>
             <!-- 961이상 -->
-            <source media="(min-width: 961px)" srcset="./assets/images/about_picture2.png">
+            <source media="(min-width: 961px)" srcset="./assets/images/about_picture2-3.png">
             <!-- <source media="(min-width: 961px)" srcset="./assets/images/about_picture2.png"> -->
             <!-- 960미만 -->
             <source media="(max-width: 960px)" srcset="./assets/images/about_picture2@sp.webp">
-            <img src="./assets/images/about_picture2.png" alt>
+            <img src="./assets/images/about_picture2-3.png" alt>
           </picture>
         </div>
         <div class="desc" data-scroll="">
@@ -260,7 +261,7 @@
           </div>
         </div>
       </section>
-      <section class="section-ethical">
+      <section class="section-ethical" id="ethical">
         <h2 class="headline">
           ETHICAL
         </h2>
@@ -304,11 +305,11 @@
             </picture>
           </div>
           <div class="recycle">
-            <img src="./assets/images/made_from_recycled_plastic.png" alt>
+            <img src="./assets/images/made_from_recycled_plastic2.png" alt>
           </div>
         </div>
       </section>
-      <section class="section-products">
+      <section class="section-products" id="product">
         <h2 class="headline">
           PRODUCTS
         </h2>
@@ -431,7 +432,7 @@
           </div>
         </div>
       </section>
-      <section class="section-news">
+      <section class="section-news" id="news">
         <h2 class="blind">news</h2>
         <p class="headline">
           NEWS
@@ -610,7 +611,7 @@
             </div>
             <div class="banner">
               <div class="text">
-                <img src="./assets/images/AMINO_MASON_WEB_SITE.png" alt>
+                <img src="./assets/images/AMINO_MASON_WEB_SITE2.png" alt>
               </div>
             </div>
           </div>
@@ -644,7 +645,7 @@
               THE BEAUTIFUL
             </span>
             <span class="sub-title">
-              by Amino Mason
+              by Sulwhasoo
             </span>
           </a>
         </h2>
@@ -659,7 +660,7 @@
                 </a>
               </li>
               <li class="sns-item">
-                <a href="https://twitter.com/SulwhasooKR" class="twitter" aria-label="트위터">
+                <a href="https://twitter.com/SulwhasooKR" class="twitter" aria-label="X">
                 </a>
               </li>
             </ul>
@@ -667,25 +668,25 @@
           <div class="group-grid">
             <ul class="nav-list left">
               <li class="nav-item">
-                <a href="">
+                <a href="#">
                   <span class="top">TOP</span>
                   <span class="bottom" aria-hidden="true">TOP</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="">
+                <a href="#about">
                   <span class="top">ABOUT</span>
                   <span class="bottom" aria-hidden="true">ABOUT</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="">
+                <a href="#ethical">
                   <span class="top">ETHICAL</span>
                   <span class="bottom" aria-hidden="true">ETHICAL</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="">
+                <a href="#product">
                   <span class="top">PRODUCTS</span>
                   <span class="bottom" aria-hidden="true">PRODUCTS</span>
                 </a>
@@ -693,7 +694,7 @@
             </ul>
             <ul class="nav-list right">
               <li class="nav-item">
-                <a href="">
+                <a href="#news">
                   <span class="top">NEWS</span>
                   <span class="bottom" aria-hidden="true">NEWS</span>
                 </a>
@@ -739,10 +740,10 @@
               </a>
             </div>
             <address class="addr">
-              <p>ステラシード株式会社<br>
-                〒107-0062 <br>
-                東京都港区南青山3-8-38</p>
-              <a href="tel:+03-6804-5584" class="tel">Tel.03-6804-5584</a>
+              <p>(주)아모레퍼시픽<br>
+                (우)04386 <br>
+                서울특별시 용산구 한강대로 100(한강로2가)</p>
+              <a href="tel:+080-030-5454" class="tel">Tel.080-030-5454</a>
             </address>
           </div>
         </div>
