--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="wrapper">
     <header class="header">
       <div class="menu-box">
-        <button aria-labelledby="메뉴 열기" aria-expanded="false" aria-haspopup="menu">
+        <button aria-labelledby="메뉴 열기" aria-expanded="false" aria-haspopup="menu" aria-selected="false">
           <span class="menu-text">
             <span class="top">menu</span>
             <span class="bottom" aria-hidden="true">menu</span>
