샤넬로 브랜드 교체

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>【公式】THE BEAUTIFUL by Amino Mason（ザ・ビューティフル by アミノメイソン）</title>
+  <title>THE BEAUTIFUL by CHANEL</title>
   <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" sizes="16x16">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -22,11 +22,11 @@
 <body>
   <div class="loading">
     <div class="text-area">
-      <p>설화. 아름다움은 자란다.</p>　
+      <p>Modernism's Splendor</p>　
       <!-- <p>私らしさが 艶 めく毎日を。</p>　 -->
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-      <path fill="#ff9daf" fill-opacity="1"
+      <path fill="#e43d67" fill-opacity="1"
         d="M0,192L34.3,165.3C68.6,139,137,85,206,96C274.3,107,343,181,411,197.3C480,213,549,171,617,154.7C685.7,139,754,149,823,176C891.4,203,960,245,1029,256C1097.1,267,1166,245,1234,208C1302.9,171,1371,117,1406,90.7L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
       </path>
     </svg>
@@ -163,7 +163,7 @@
         <div class="title-box">
           <h1 class="title">THE BEAUTIFUL</h1>
           <h2 class="sub-title">
-            by Sulwhasoo
+            by CHANEL
           </h2>
         </div>
       </section>
@@ -175,20 +175,33 @@
             </h2>
             <div class="text-box">
               <p class="desc">
-                2023년, 설화수 브랜드의 시작과 함께한 윤조에센스가 <br>6세대로 또 한 번 진화합니다.<br>
+                In-depth study of the House’s emblematic flower<br> led CHANEL Research <br>to discover its
+                extraordinary levels<br>
+                of
+                protocatechuic acid, a molecule belonging<br> to the polyphenol family that is known for <br>its
+                antioxidant
+                properties.<br>
+                THE POWER OF THE RED CAMELLIA<br>
+                <!-- 2023년, 설화수 브랜드의 시작과 함께한 윤조에센스가 <br>6세대로 또 한 번 진화합니다.<br>
                 인삼의 힘으로 더욱 강력해진<br> SULWHASOO MASTER COMPLEX™.<br>
                 놓여있는 것만으로도 당신의 취향과 <br> 안목을 보여주는 새로운 디자인.
-                피부 능력을 깨워줄 <br> 6세대 윤조에센스를 지금 만나보세요.
+                피부 능력을 깨워줄 <br> 6세대 윤조에센스를 지금 만나보세요. -->
               </p>
             </div>
           </div>
           <div class="image-box" data-scroll="">
             <picture>
               <!-- 961이상 -->
-              <source media="(min-width: 961px)" srcset="./assets/images/concept_picture2.jpg">
+              <!-- <source media="(min-width: 961px)" srcset="./assets/images/concept_picture2.jpg"> -->
               <!-- 960미만 -->
-              <source media="(max-width: 960px)" srcset="./assets/images/concept_picture2.jpg">
-              <img src="./assets/images/concept_picture2.jpg" alt>
+              <!-- <source media="(max-width: 960px)" srcset="./assets/images/concept_picture2.jpg">
+              <img src="./assets/images/concept_picture2.jpg" alt> -->
+              <source media="(max-width: 768px)"
+                srcset="https://puls-img.chanel.com/c_limit,w_320/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 320w, https://puls-img.chanel.com/c_limit,w_480/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 480w, https://puls-img.chanel.com/c_limit,w_640/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 640w, https://puls-img.chanel.com/c_limit,w_768/q_auto:best,dpr_auto/1667230099718-03actifmjpg_980x750.jpg 768w">
+              <source media="(min-width: 769px)"
+                srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 960w, https://puls-img.chanel.com/c_limit,w_1024/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1024w, https://puls-img.chanel.com/c_limit,w_1280/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1280w, https://puls-img.chanel.com/c_limit,w_1400/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1400w, https://puls-img.chanel.com/c_limit,w_1600/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1600w, https://puls-img.chanel.com/c_limit,w_1920/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 1920w, https://puls-img.chanel.com/c_limit,w_2400/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 2400w, https://puls-img.chanel.com/c_limit,w_2800/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 2800w, https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg 3200w">
+              <img alt=""
+                src="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087508-03actifdjpg_1140x1140.jpg">
             </picture>
           </div>
           <div class="desc-effect">
@@ -214,18 +227,22 @@
           ABOUT
         </h2>
         <strong class="title">
-          예술에 가까운 <br>인삼 기술.
-          <!-- 髪の印象変わる神艶
-          レシピ -->
+          THE KEY <br>INGREDIENT
+          <br>IN N°1 DE CHANEL
         </strong>
         <div class="image-box" data-scroll="">
           <picture>
             <!-- 961이상 -->
-            <source media="(min-width: 961px)" srcset="./assets/images/about_picture2-3.png">
-            <!-- <source media="(min-width: 961px)" srcset="./assets/images/about_picture2.png"> -->
+            <!-- <source media="(min-width: 961px)" srcset="./assets/images/about_picture2-3.png"> -->
             <!-- 960미만 -->
-            <source media="(max-width: 960px)" srcset="./assets/images/about_picture2-3@sp.webp">
-            <img src="./assets/images/about_picture2-3.png" alt>
+            <!-- <source media="(max-width: 960px)" srcset="./assets/images/about_picture2-3@sp.webp">
+            <img src="./assets/images/about_picture2-3.png" alt> -->
+            <source media="(max-width: 960px)"
+              srcset="https://puls-img.chanel.com/c_limit,w_320/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 320w, https://puls-img.chanel.com/c_limit,w_480/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 480w, https://puls-img.chanel.com/c_limit,w_640/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 640w, https://puls-img.chanel.com/c_limit,w_768/q_auto:best,dpr_auto/1667230099755-01covermjpg_820x750.jpg 768w">
+            <source media="(min-width: 961px)"
+              srcset="https://puls-img.chanel.com/c_limit,w_960/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 960w, https://puls-img.chanel.com/c_limit,w_1024/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1024w, https://puls-img.chanel.com/c_limit,w_1280/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1280w, https://puls-img.chanel.com/c_limit,w_1400/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1400w, https://puls-img.chanel.com/c_limit,w_1600/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1600w, https://puls-img.chanel.com/c_limit,w_1920/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 1920w, https://puls-img.chanel.com/c_limit,w_2400/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 2400w, https://puls-img.chanel.com/c_limit,w_2800/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 2800w, https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg 3200w">
+            <img alt=""
+              src="https://puls-img.chanel.com/c_limit,w_3200/q_auto:best,dpr_auto/1667230087642-01coverdjpg_1300x2880.jpg">
           </picture>
         </div>
         <div class="desc" data-scroll="">
@@ -241,8 +258,12 @@
           </div>
           <div class="bottom-text">
             <p class="text">
-              외부 자극에 의해 예민해진 피부도<br> 사용할 수 있는 저자극 포뮬러가 시원하고 <br>부드럽게 퍼지며 피부 속까지 빠르게 흡수되어<br> 충만한 보습감을 선사합니다. <br>
-              하이포 알러지 테스트 완료. 피부과 테스트 완료. 피부 자극도 0.0
+              The Red Camellia is a flower unlike any other. <br>Its exceptional resilience and <br>concentrated energy
+              allow <br>it to bloom
+              during winter at extreme temperatures.<br> Within its petals, CHANEL Research identified <br>a
+              revitalizing
+              ingredient <br>that
+              helps keep skin looking youthful.<br>
             </p>
             <a href="" class="link-headline">
               <p class="link-title">
@@ -268,17 +289,21 @@
         <div class="inner">
           <div class="text-box">
             <strong class="title">
-              피부에 활력을 주는<br>
-              인삼의 <br>핵심 성분
+              THE RESEARCH<br>
+              INGREDIENT
+              <!-- <br> 피부에 활력을 주는<br>
+              인삼의 <br>핵심 성분 -->
             </strong>
             <div class="desc">
               <div class="bottom">
                 <p class="text">
-                  보습과 진정에 탁월한 다섯 가지 <br> 원료의 조합으로<br>
-                  탄생시킨 자음보습단이<br>
-                  외부 자극으로 약해진 건조한 <br> 피부를 케어해 드립니다.<br>
-                  시작은 윤조에센스로, 마무리는 자음생세럼과 <br>자음생크림으로<br>
-                  피부에 인삼의 힘을 온전히 전달하세요
+                  The ability to harness the power of <br>the Red Czar Camellia, <br> the ingredient at the heart of
+                  the
+                  N°1
+                  DE
+                  CHANEL line, <br>is the
+                  result of 17 years of research.<br>
+                  At the heart of N°1 DE CHANEL is the Red Camellia, <br>a flower with revitalizing powers
                 </p>
                 <a href="" class="link-headline">
                   <p class="link-title">
@@ -299,9 +324,9 @@
           </div>
           <div class="image-box" data-scroll="">
             <picture>
-              <source media="(min-width: 961px)" srcset="./assets/images/ethical_section_picture2.png">
+              <source media="(min-width: 961px)" srcset="./assets/images/scienceantiaged.jpg">
               <source media="(max-width: 960px)" srcset="./assets/images/ethical_section_picture2@sp.webp">
-              <img src="./assets/images/ethical_section_picture2.png" alt>
+              <img src="./assets/images/scienceantiaged.jpg" alt>
             </picture>
           </div>
           <div class="recycle">
